#171 Show the list of discounts on the PP edit page

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/container/template/price-product-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/container/template/price-product-edit-container.html
@@ -28,7 +28,9 @@
 		<hr>
 		<div class="row">
 			<price-product-edit-constraints-section [didSubmit]="didSubmit"></price-product-edit-constraints-section>
+			<price-product-edit-discounts-section [didSubmit]="didSubmit"></price-product-edit-discounts-section>
 		</div>
+		<hr>
 		<div class="row">
 			<price-product-edit-filters-section [didSubmit]="didSubmit"></price-product-edit-filters-section>
 		</div>
