#106 Client side, new booking flow - block email confirmations if necessary

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-email-config/template/new-booking-email-config.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-email-config/template/new-booking-email-config.html
@@ -8,7 +8,7 @@
             <div class="col-sm-12 col-xs-12 booking-details-header">
                 <span class="first-line"><i class="fa fa-envelope"></i> {{ 'Recipients' | translate }}</span>
             </div>
-			<email-selector [customerList]="customerList" (onEmailListChanged)="emailRecipientList=$event"></email-selector>
+			<email-selector [customerList]="customerList" [disabled]="bookingConfirmationsBlocked" (onEmailListChanged)="emailRecipientList=$event"></email-selector>
 		</div>
 	</div>
 </div>
