--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-email-config/template/new-booking-email-config.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-email-config/template/new-booking-email-config.html
@@ -9,6 +9,11 @@
                 <span class="first-line"><i class="fa fa-envelope"></i> {{ 'Recipients' | translate }}</span>
             </div>
 			<email-selector [customerList]="customerList" [disabled]="bookingConfirmationsBlocked" (onEmailListChanged)="emailRecipientList=$event"></email-selector>
+			<div class="col-xs-12" [hidden]="!bookingConfirmationsBlocked">
+    			<small class="text-muted">
+        			<i class="fa fa-info-circle"></i> {{ 'When a company/travel agent on a booking has booking confirmations disabled, booking confirmations are blocked for that booking.' | translate }}
+    			</small>
+			</div>
 		</div>
 	</div>
 </div>
