--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/send-confirmation/template/booking-send-confirmation.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/send-confirmation/template/booking-send-confirmation.html
@@ -1,10 +1,17 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasSendRight">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="send()"> 
+            <button type="button" class="btn btn-primary btn-block oneline-text" [disabled]="bookingConfirmationsBlocked" (click)="send()"> 
                 <i class="fa fa-envelope"></i>
                 {{ 'Send Confirmation' | translate }}
 			</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12" [hidden]="!bookingConfirmationsBlocked">
+            <small class="text-muted">
+                <i class="fa fa-info-circle"></i> {{ 'When a company/travel agent on a booking has booking confirmations disabled, booking confirmations are blocked for that booking.' | translate }}
+            </small>
         </div>
     </div>
 </div>
