#218 Save invoice notes on bookings when adding new bookings

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
@@ -126,6 +126,14 @@
 	                </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12 col-xs-12 form-group">
+                    <label>{{ 'Invoice Notes' | translate }}</label>
+                    <div class="input-group">
+		                <textarea class="form-control" [(ngModel)]="invoiceNotes" name="invoiceNotes"></textarea>
+	                </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
