--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-details/template/booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-details/template/booking-details-editor.html
@@ -26,11 +26,14 @@
         <div class="col-xs-12 col-sm-1">
             <p>{{'Invoice Notes' | translate}}</p>
         </div>
-        <div class="col-xs-12 col-sm-8 field-value text-field" *ngIf="readonly">
+        <div class="col-xs-12 col-sm-8 field-value text-field" *ngIf="readonly || invoiceIsClosed">
             <p class="notes" *ngIf="!invoiceNotesAreEmpty">{{bookingDO.invoiceNotes}}</p>
             <p class="placeholder" *ngIf="invoiceNotesAreEmpty">{{'None' | translate}}</p>
         </div>
-        <div class="col-xs-12 col-sm-8 form-group" *ngIf="!readonly">
+        <div class="col-xs-12 col-sm-8 field-value text-field" *ngIf="invoiceIsClosed && !readonly">
+            <p class="text-muted small"> <i class="fa fa-info-circle"></i>{{ 'After the invoice has been closed, invoice notes cannot be edited anymore.' | translate }}</p>
+        </div>
+        <div class="col-xs-12 col-sm-8 form-group" *ngIf="!readonly && !invoiceIsClosed">
             <textarea class="form-control notes" [(ngModel)]="bookingDO.invoiceNotes" name="invoiceNotes"></textarea>
         </div>
     </div>
