--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -155,9 +155,13 @@
                                     <span class="text-details"><%= additionalPayerDetails %></span>
                                 <%}%>
                                 
+                                <br>
+                                Notes:
+                                <br>
                                 <%if (notesFromBooking.length > 0) {%>
-                                    <br>
                                     <%= notesFromBooking %>
+                                <% } else{ %>
+                                    -
                                 <%}%>
                                 
                             </td>
