--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/components/booking-history/template/customer-booking-history.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/components/booking-history/template/customer-booking-history.html
@@ -8,7 +8,7 @@
                         <tr *ngFor="let bookingVM of bookingVMList">
                             <td width="30%" class="increased-font-weight clickable-item font-size-small">
                                 <span (click)="goToBooking(bookingVM)"> 
-                                    {{ bookingVM.booking.groupBookingReference }} / {{ bookingVM.booking.bookingReference }}
+                                     {{ 'ResNO' | translate }} {{ bookingVM.booking.reservationNumber }}
                                 </span>
                             </td>
                             <td width="70%">{{ bookingVM.booking.interval | thlongdateinterval }} / 
