--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
@@ -15,22 +15,58 @@
 		</div>
 	</div>
 	<div customScroll class="table-body">
-		<div class="price-products-row flex-row" [ngClass]="getPriceProductRowClasses(priceProduct)" *ngFor="let priceProduct of filteredPriceProduct">
-			<div class="price-products-col flex-jc-start wide">
-				<div class="filter-indicator" [ngClass]="getPriceProductFilterClasses(priceProduct)">
-					<span class="f-10" title="{{getPriceProductTextFilter(priceProduct)}}">{{getPriceProductTextFilterInitial(priceProduct)}}</span>
+		<span *ngFor="let priceProduct of filteredPriceProduct">
+			<div class="price-products-row flex-row" [ngClass]="getPriceProductRowClasses(priceProduct)">
+				<div class="price-products-col flex-jc-start wide">
+					<div class="filter-indicator" [ngClass]="getPriceProductFilterClasses(priceProduct)">
+						<span class="f-10" title="{{getPriceProductTextFilter(priceProduct)}}">{{getPriceProductTextFilterInitial(priceProduct)}}</span>
+					</div>
+					<span class="p-l-6 ellipsis-text">
+						<input type="checkbox" [(ngModel)]="itemsSelectionState[priceProduct.id]" name="itemsSelectionStatePPId" *ngIf="!priceProduct.lastRoomAvailability">
+						<span class="orange-color f-10" *ngIf="priceProduct.lastRoomAvailability" title="{{'Last Room Availability' | translate}}"><b>LRA</b></span>
+						<span class="dark-gray-color f-14" [ngClass]="{'clickable': priceProduct.hasMoreThanOneDynamicPrice()}" (click)="toggleExpanded(priceProduct)"> 
+							<small title="{{ 'Base price for %roomCategory%' | translate:{roomCategory: priceProduct.roomCategoryNameForPriceBrief} }}" class="bold-text"> 
+								{{ priceProduct.priceBriefString }} 
+							</small> 
+							<span title="{{ priceProduct.name }}">
+								{{ priceProduct.name }} 
+							</span>
+							<i class="fa p-l-2 p-t-2" 
+								*ngIf="priceProduct.hasMoreThanOneDynamicPrice()"
+								[ngClass]="{'fa-angle-down': !isExpanded(priceProduct), 'fa-angle-up': isExpanded(priceProduct)}">
+							</i>
+						</span>
+					</span>
 				</div>
-				<span class="p-l-6 ellipsis-text">
-					<input type="checkbox" [(ngModel)]="itemsSelectionState[priceProduct.id]" name="itemsSelectionStatePPId" *ngIf="!priceProduct.lastRoomAvailability">
-					<span class="orange-color f-10" *ngIf="priceProduct.lastRoomAvailability" title="{{'Last Room Availability' | translate}}"><b>LRA</b></span>
-					<span class="dark-gray-color f-14">{{priceProduct.name}}</span>
-				</span>
+				<div class="price-products-col" *ngFor="let value of priceProduct.priceProductYieldItemDO.stateList; let currentIndex = index">
+					<span class="w-100">
+						<price-product-state [model]="getYieldStateModel(priceProductResults, priceProduct, currentIndex)" (stateChanged)="handleStateChange($event)"></price-product-state>
+					</span>
+				</div>
 			</div>
-			<div class="price-products-col" *ngFor="let value of priceProduct.priceProductYieldItemDO.stateList; let currentIndex = index">
-				<span class="w-100">
-					<price-product-state [model]="getYieldStateModel(priceProductResults, priceProduct, currentIndex)" (stateChanged)="handleStateChange($event)"></price-product-state>
-				</span>
-			</div>
-		</div>
+
+			<span *ngIf="priceProduct.hasMoreThanOneDynamicPrice() && isExpanded(priceProduct)" >
+				<div class="price-products-row flex-row white" [ngClass]="getPriceProductRowClasses(priceProduct)" *ngFor="let dynamicPrice of priceProduct.dynamicPriceList">
+					<div class="price-products-col flex-jc-start wide">
+						<div class="filter-indicator dynamic-price"> </div>
+						<span class="p-l-6 ellipsis-text">
+							<span class="dark-gray-color f-14 p-l-16">
+								<small title="{{ 'Base price for %roomCategory%' | translate:{roomCategory: dynamicPrice.roomCategoryNameForPriceBrief} }}" class="bold-text"> 
+									{{ dynamicPrice.priceBriefString }} 
+								</small> 
+								<span title="{{ dynamicPrice.description }}">
+									{{ dynamicPrice.name }}
+								</span>
+							</span>
+						</span>
+					</div>
+					<div class="price-products-col" *ngFor="let state of dynamicPrice.openList">
+						<span class="w-100 horizontal-align-center">
+							<input type="checkbox" name="itemsSelectionStatePPDRId" [checked]="stateIsOpen(state)">
+						</span>
+					</div>
+				</div>
+			</span>
+		</span>
 	</div>
 </div>
