--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -23,6 +23,6 @@
 	<loading-component [isLoading]="isLoading"></loading-component>
 	
 	<dynamic-price-container
-		[(priceContainer)]="priceContainer">
+		[(dynamicPriceVMContainer)]="dynamicPriceVMContainer">
 	</dynamic-price-container>
 </div>
