#185 Fixed the scroll in the hotel operations dashboard on safari

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/template/hotel-operations-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/template/hotel-operations-dashboard.html
@@ -1,7 +1,7 @@
 <div class="row full-height">
 	<div class="hotel-operations-dashboard operations-dashboard">
 		<arrivals-pane [hotelOperationsDashboard]="self" class="pane full-height"></arrivals-pane>
-		<rooms-canvas [hotelOperationsDashboard]="self" ></rooms-canvas>
+		<rooms-canvas [hotelOperationsDashboard]="self" class="full-height p-b-16"></rooms-canvas>
 		<departures-pane [hotelOperationsDashboard]="self" class="pane full-height"></departures-pane>
 	</div>
 </div>
