#150 Fixed the select all bug in the YM & display info message when trying to yield a PP with LRA on an individual day

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
@@ -6,7 +6,7 @@
 			<input type="checkbox"
 			[(ngModel)]="selectAllItemsFlag"
 			name="selectAllItemsFlag"
-			(change)="setItemSelectionStateToAll(!selectAllItemsFlag)"
+			(change)="setItemSelectionStateToAll(selectAllItemsFlag)"
 			>
 			<span class="dark-gray-color oneline-text f-14 p-l-6">{{'Price Products' | translate}}</span>
 		</div>
