--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -22,7 +22,6 @@
 <div class="col-xs-12">
 	<loading-component [isLoading]="isLoading"></loading-component>
 	
-	<dynamic-price-container
-		[(dynamicPriceVMContainer)]="dynamicPriceVMContainer">
+	<dynamic-price-container>
 	</dynamic-price-container>
 </div>
