#150 Small UX improvements in YM

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
@@ -24,7 +24,7 @@
 					<span class="p-l-6 ellipsis-text up-col-5p">
 						<input type="checkbox" [(ngModel)]="itemsSelectionState[priceProduct.id]" name="itemsSelectionStatePPId" *ngIf="!priceProduct.lastRoomAvailability">
 						<span class="orange-color f-10" *ngIf="priceProduct.lastRoomAvailability" title="{{'Last Room Availability' | translate}}"><b>LRA</b></span>
-						<span class="dark-gray-color f-14" [ngClass]="{'clickable': priceProduct.hasMoreThanOneDynamicPrice()}" (click)="toggleExpanded(priceProduct)"> 
+						<span class="dark-gray-color f-14" (click)="toggleExpanded(priceProduct)"> 
 							<small class="bold-text"
 								title="{{ 'Base price for %roomCategory%' | translate:{roomCategory: priceProduct.roomCategoryNameForPriceBrief} }}"> 
 								{{ccyNativeSymbol}} {{ priceProduct.priceBriefString }} 
@@ -34,7 +34,10 @@
 							</span>
 						</span>
 					</span>
-					<span class="p-r-6 clickable" *ngIf="priceProduct.hasMoreThanOneDynamicPrice()" (click)="toggleExpanded(priceProduct)">
+					<span class="p-r-8 f-s-14 clickable" 
+						*ngIf="priceProduct.hasMoreThanOneDynamicPrice()" 
+						(click)="toggleExpanded(priceProduct)"
+						title="{{ 'Show/hide dynamic rates' | translate }}">
 						<i class="fa bold-text" [ngClass]="{'fa-angle-down': !isExpanded(priceProduct), 'fa-angle-up': isExpanded(priceProduct)}">
 						</i>
 					</span>
@@ -50,7 +53,7 @@
 				<div class="price-products-row flex-row white" [ngClass]="getPriceProductRowClasses(priceProduct)" *ngFor="let dynamicPrice of priceProduct.dynamicPriceList">
 					<div class="price-products-col flex-jc-start wide">
 						<div class="filter-indicator dynamic-price"> </div>
-						<span class="p-l-6 ellipsis-text clickable" (click)="openDynamicPriceYieldModal(priceProduct, dynamicPrice)">
+						<span class="p-l-6 ellipsis-text up-col-5p">
 							<span class="dark-gray-color f-14 p-l-16">
 								<small title="{{ 'Base price for %roomCategory%' | translate:{roomCategory: dynamicPrice.roomCategoryNameForPriceBrief} }}" class="bold-text"> 
 									{{ccyNativeSymbol}} {{ dynamicPrice.priceBriefString }} 
@@ -59,6 +62,12 @@
 									{{ dynamicPrice.name }}
 								</span>
 							</span>
+						</span>
+						<span class="p-r-6 clickable" 
+							title="{{ 'Open %rateName% for longer periods' | translate:{rateName: dynamicPrice.name} }}"
+							(click)="openDynamicPriceYieldModal(priceProduct, dynamicPrice)">
+							<i class="fa bold-text fa-calendar">
+							</i>
 						</span>
 					</div>
 					<div class="price-products-col" *ngFor="let state of dynamicPrice.openList; let currentIndex = index">
